# Paper-Analysis-Renew

./: .gitignore  .gitmodules  AGENTS.md  README.md  compound-engineering.local.md  pyproject.toml
docs/agent-guide/: command-surface.md  quickstart.md
docs/benchmarks/: README.md  paper-filter-annotation-guidelines.md  paper-filter-dataset-protocol.md  paper-filter-label-spec.md  paper-filter-ui-workflow.md
docs/brainstorms/: 2026-03-19-agent-first-project-organization-requirements.md  2026-03-21-paper-filter-evaluation-taxonomy-requirements.md  2026-03-30-decoding-strategy-ab-requirements.md  2026-03-31-testing-quality-refactor-requirements.md  2026-04-10-arxiv-subscription-minimal-launch-requirements.md
docs/engineering/: ab-worktree-workflow.md  embedding-sim-binary-a-route-notes.md  encoding-and-output.md  extending-cli.md  testing-and-quality.md
docs/plans/: 2026-03-19-001-feat-agent-first-engineering-foundation-plan.md  2026-03-19-002-feat-conference-paperlists-ingestion-plan.md  2026-03-20-001-feat-add-ci-html-review-report-plan.md  2026-03-20-002-feat-add-arxiv-subscription-ingestion-plan.md  2026-03-21-001-fix-codex-skill-loading-and-natural-language-entry-plan.md  2026-03-21-002-fix-systematic-chinese-encoding-corruption-plan.md  2026-03-21-003-feat-build-paper-filter-dual-annotation-system-plan.md  2026-03-30-002-feat-main-branch-ab-scaffold-plan.md  2026-03-31-001-feat-main-worktree-binary-ab-simulation-plan.md  2026-04-02-001-refactor-local-ci-lint-capability-enhancement-plan.md  2026-04-10-001-feat-arxiv-subscription-minimal-launch-plan.md  2026-04-10-002-feat-email-delivery-capability-plan.md  2026-04-11-001-feat-research-object-four-way-classifier-plan.md  2026-05-28-001-feat-arxiv-review-dataset-import-plan.md
docs/solutions/: README.md
paper_analysis/api/: __init__.py  evaluation_predictor.py  evaluation_protocol.py  evaluation_server.py
paper_analysis/cli/: __init__.py  arxiv.py  common.py  conference.py  main.py  quality.py  report.py
paper_analysis/config/: doubao.template.yaml  openrouter.template.yaml
paper_analysis/domain/: __init__.py  benchmark.py  delivery_run.py  email_delivery.py  filtering.py  paper.py  preference.py
paper_analysis/evaluation/: __init__.py  ab_protocol.py  ab_reporter.py  ab_runner.py  errors.py  route_registry.py
paper_analysis/services/: __init__.py  annotation_merge.py  annotation_repository.py  annotator_selection.py  arxiv_dataset_import.py  arxiv_final_report_translator.py  arxiv_pipeline.py  arxiv_recommender.py  arxiv_subscription_delivery.py  arxiv_subscription_site_writer.py  benchmark_builder.py  benchmark_reporter.py  ci_html_writer.py  codex_annotator.py  conference_pipeline.py  conference_sampler.py  doubao_abstract_translator.py  doubao_annotator.py  email_sender.py  llm_recommendation_reviewer.py  preference_ranker.py  quality_case_support.py  report_writer.py
paper_analysis/shared/: __init__.py  encoding.py  paths.py  sample_loader.py
paper_analysis/sources/: __init__.py
paper_analysis/templates/: arxiv_subscription_index.html.j2  arxiv_subscription_latest.html.j2  ci_report.html.j2
paper_analysis/testing/: __init__.py  case_metadata.py
paper_analysis/tools/: __init__.py  annotate_paper_filter_benchmark.py  backfill_paper_filter_abstract_zh.py  cleanup_legacy_benchmark_protocol.py  rebuild_paper_filter_benchmark.py
paper_analysis/utils/: __init__.py  ai_client.py  codex_cli_client.py  doubao_client.py  openrouter_client.py
paper_analysis/web/: annotation_app.py  view_models.py
scripts/: run_arxiv_github_issue_codex.ps1  run_arxiv_subscription_codex.ps1  translate_arxiv_final_report.py
scripts/quality/: lint.py  quality_report.py  run_unittest_stage.py  typecheck.py
tests/e2e/: test_codex_agent_flow.py  (+2 more)
todos/: 001-complete-p2-cli-input-validation.md  002-complete-p2-quality-output-encoding.md  003-complete-p3-ignore-generated-python-cache.md  004-pending-p3-misleading-gitignore-claim.md  005-pending-p2-raw-quality-artifact-output.md  006-pending-p2-document-schema-validation-overclaim.md  007-pending-p3-trim-redundant-and-overstated-solution-note.md  008-complete-p1-ci-html-autoescape-xss.md  009-complete-p2-ci-html-invalid-e2e-json-resilience.md  010-complete-p3-centralize-ci-html-status-labels.md  011-complete-p3-simplify-quality-stage-dispatch.md
(+93 files in other folders)
