[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-analysis-new"
version = "0.1.0"
description = "Agent-first paper filtering foundation"
requires-python = ">=3.11"
dependencies = [
    "Jinja2>=3.1,<4",
    "mypy>=1.18,<2",
    "PyYAML>=6,<7",
    "radon>=6,<7",
    "ruff>=0.13,<0.14",
    "types-PyYAML>=6.0.12,<7",
    "volcengine-python-sdk>=1.0.129,<2",
]

[project.scripts]
paper-analysis-evaluation-api = "paper_analysis.api.evaluation_server:main"

[tool.setuptools.packages.find]
include = ["paper_analysis*"]

[tool.setuptools.package-data]
"paper_analysis" = ["templates/*.j2", "config/*.template.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["paper_analysis", "tests", "scripts"]
exclude = ["artifacts", "third_party"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213", "E501", "EM101", "EM102", "ISC001", "RUF001", "TRY003"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"paper_analysis/services/arxiv_pipeline.py" = ["PLR0913"]
"paper_analysis/services/conference_pipeline.py" = ["PLR0913"]
"paper_analysis/services/quality_case_support.py" = ["PLR0913"]
"paper_analysis/utils/doubao_client.py" = ["PLR0913"]
"scripts/**/*.py" = ["ANN401", "BLE001", "D", "FBT001", "INP001", "N802", "PERF401", "PLR2004", "T201", "TC006"]
"scripts/quality/lint.py" = ["E402"]
"scripts/quality/run_unittest_stage.py" = ["E402"]
"tests/**/*.py" = ["ARG002", "ARG005", "BLE001", "D", "FBT003", "FLY002", "I001", "PLC0415", "PLR0915", "PLR2004", "PT009", "PT027", "RET503", "RUF002", "S101", "S310", "S603", "SIM117", "TC006"]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
warn_unused_ignores = true
explicit_package_bases = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
files = [
    "paper_analysis",
    "tests",
    "scripts",
]
